# samurai

./: .gitignore  Cargo.toml  README.md
script/: decode-scripts.sh  format-scripts.sh
script/vscode-extension/: api-reference.md  extension.js  language-configuration.json  package.json
script/vscode-extension/syntaxes/: samurai-script.tmLanguage.json
splits/: Way of the Samurai - Ending #1 (Emulator, NG).lss  Way of the Samurai - Ending #2 (Emulator, NG).lss  Way of the Samurai - Ending #3 (Emulator, NG).lss  Way of the Samurai - Ending #5 (Emulator, NG).lss  Way of the Samurai - Ending #6 (Emulator, NG).lss
src/: autosplitter.rs  cli.rs  debug.rs  lib.rs  main.rs  module.rs  script.rs  texture.rs  volume.rs
src/autosplitter/: routes.rs
src/cli/: autosplitter.rs  debug.rs  module.rs  script.rs  splits.rs  texture.rs  volume.rs
src/cli/debug/: camera.rs  characters.rs  config.rs  flags.rs  globals.rs  mod.rs
src/debug/: constants.rs  emulator.rs  game.rs  layout.rs  platform.rs
src/script/: analysis.rs  parse.rs  parser.rs  types.rs
vscode-extension/: language-configuration.json  package.json
vscode-extension/syntaxes/: samurai-script.tmLanguage.json
