[package]
name = "samurai"
version = "0.1.0"
authors = ["descawed <samurai@descawed.com>"]
edition = "2024"
description = "Tools for working with the files of the game (Way of the) Samurai"
readme = "README.md"
repository = "https://github.com/descawed/samurai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.102"
binrw = "~0.15.1"
chardet = "~0.2.4"
chumsky = "1.0.0-alpha.8"
clap = "4.6.1"
common_macros = "~0.1.1"
encoding_rs = "~0.8.35"
image = "~0.25.10"
itertools = "~0.14.0"
lazy_static = "~1.5.0"
ordered_hash_map = "~0.6.0"
pathdiff = "~0.2.3"
regex = "~1.12.3"
walkdir = "~2.5.0"
strum = { version = "~0.28.0", features = ["derive"] }
