[package]
name = "samurai"
version = "0.3.0"
authors = ["descawed <samurai@descawed.com>"]
edition = "2024"
description = "Tools for working with the files of the game (Way of the) Samurai"
readme = "README.md"
repository = "https://github.com/descawed/samurai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.104"
binrw = "~0.15.1"
bytemuck = { version = "1.25.2", features = ["derive", "min_const_generics"] }
chardet = "~0.2.4"
chumsky = "0.13.0"
clap = "4.6.3"
colog = "1.4.0"
common_macros = "~0.1.1"
crossterm = "0.29.0"
dirs = "6"
encoding_rs = "~0.8.35"
image = "~0.25.10"
itertools = "~0.15.0"
log = "~0.4"
lss-autosplitter = { git = "https://github.com/descawed/lss-autosplitter.git", branch = "main" }
num-traits = "0.2.19"
object = "0.39.1"
ordered_hash_map = "~0.6.0"
pathdiff = "~0.2.3"
quick-xml = { version = "0.41.0", features = ["serde", "serialize"] }
ratatui = "0.30.2"
serde = { version = "~1.0.229", features = ["derive"] }
walkdir = "~2.5.0"
strum = { version = "~0.28.0", features = ["derive"] }
sysinfo = "0.39.6"
thiserror = "2.0.19"
toml = "1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
lto = true
strip = true